// Copyright 2015 The gRPC Authors
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.
syntax = "proto3";

option java_multiple_files = true;
option java_package = "github.com.hlx.kvservice.grpc";
option java_outer_classname = "FTKVService";

service KVServer {
  rpc OpenSession (OpenSessionRequest) returns (OpenSessionReply);
  rpc Get (GetRequest) returns (GetReply);
  rpc Update (UpdateRequest) returns (UpdateReply);
}

enum ErrCode {
  WRONG_LEADER = 0;
  OK = 1;
  NO_KEY = 2;
  INVALID_SESSION = 3;
  INVALID_REQUEST_TYPE = 4;
  INVALID_PASSWORD = 5;
}

enum RequestType {
  OPEN_SESSION = 0;
  GET= 1;
  PUT = 2;
  APPEND = 3;
  DELETE = 4;
}

message OpenSessionRequest {
  string password = 1;
  RequestType request_type = 2;
}

message OpenSessionReply {
  string session_id = 1;
  ErrCode err_code = 2;
}

message UpdateRequest {
  string key = 1;
  string value = 2;
  RequestType request_type = 3;
  string session_id = 4;
}

message UpdateReply {
  ErrCode err_code = 1;
}

message GetRequest {
  string key = 1;
  string session_id = 2;
  RequestType request_type = 3;
}

message GetReply {
  string value = 1;
  ErrCode err_code = 2;
}

